[gd_scene load_steps=11 format=3 uid="uid://deqlafa4thvkq"]

[ext_resource type="Script" uid="uid://dtwrh22xbq88p" path="res://ui/DialogScreen.gd" id="1_dthu0"]
[ext_resource type="Texture2D" uid="uid://dw5yp1jlnx1cl" path="res://ui/images/dialogBox.png" id="1_nqqr4"]
[ext_resource type="Texture2D" uid="uid://112e7hc5iufs" path="res://assets/actors/Harold.png" id="1_wb4t7"]
[ext_resource type="Script" uid="uid://d3vt8uwmn3v7m" path="res://assets/text/dialogs/DialogLine.gd" id="2_di16t"]
[ext_resource type="Texture2D" uid="uid://c2wd00k1x3hw6" path="res://assets/actors/Logan.png" id="4_qnnqv"]
[ext_resource type="Script" uid="uid://cxcmgivfcl054" path="res://assets/text/dialogs/DialogPlay.gd" id="5_rmnu3"]

[sub_resource type="Resource" id="Resource_r8cnc"]
script = ExtResource("2_di16t")
name = "Harold"
text = "Hola Esto es una puta prueba"
image = ExtResource("1_wb4t7")
metadata/_custom_type_script = "uid://d3vt8uwmn3v7m"

[sub_resource type="Resource" id="Resource_18a35"]
script = ExtResource("2_di16t")
name = "Logan"
text = "Hola"
image = ExtResource("4_qnnqv")
metadata/_custom_type_script = "uid://d3vt8uwmn3v7m"

[sub_resource type="Resource" id="Resource_gt3hk"]
script = ExtResource("5_rmnu3")
dialogScript = Array[ExtResource("2_di16t")]([SubResource("Resource_r8cnc"), SubResource("Resource_18a35")])
metadata/_custom_type_script = "uid://cxcmgivfcl054"

[sub_resource type="Theme" id="Theme_avhl4"]
default_font_size = 12

[node name="DialogScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_dthu0")
dialogScript = SubResource("Resource_gt3hk")

[node name="Character" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 107.0
offset_right = 347.0
offset_bottom = 433.0
texture = ExtResource("1_wb4t7")
flip_h = true

[node name="TextBox2" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 89.0
offset_top = 357.0
offset_right = 196.0
offset_bottom = 395.0
scale = Vector2(2, 2)
texture = ExtResource("1_nqqr4")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Text2" type="RichTextLabel" parent="TextBox2"]
layout_mode = 0
offset_left = 10.0
offset_top = 9.0
offset_right = 98.0
offset_bottom = 28.0
theme = SubResource("Theme_avhl4")
text = "TEST"
scroll_active = false

[node name="TextBox" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 63.0
offset_top = 411.0
offset_right = 573.0
offset_bottom = 509.0
scale = Vector2(2, 2)
texture = ExtResource("1_nqqr4")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Text" type="RichTextLabel" parent="TextBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 13.0
offset_right = -12.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
text = "TEST"
scroll_active = false
